--- a/image_dbs.html
+++ b/image_dbs.html
@@ -267,6 +267,40 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-05
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-19
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            5.3
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa .sqlite3
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-08-05_file_v2b.7z" class="external text" rel="nofollow">images.update.2015-08-05.v2b (.xowa)</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-08-05_file_v2a.7z" class="external text" rel="nofollow">images.update.2015-08-05.v2a (.xowa)</a><br>
+<!--             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-08-05_file_v1.7z" class="external text" rel="nofollow">images.update.2015-08-05.v1 (.sqlite3)</a><br> -->
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
             <a href="https://en.wiktionary.org/wiki/">https://en.wiktionary.org</a>
           </p>
         </td>
@@ -1928,74 +1962,80 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://bn.wikipedia.org/wiki/">http://bn.wikipedia.org</a><br>
-            <a href="https://bn.wiktionary.org/wiki/">http://bn.wiktionary.org</a><br>
-            <a href="https://bn.wikisource.org/wiki/">http://bn.wikisource.org</a><br>
-            <a href="https://bn.wikibooks.org/wiki/">http://bn.wikibooks.org</a>
+            <a href="https://bn.wikipedia.org/wiki/">https://bn.wikipedia.org</a><br>
+            <a href="https://bn.wiktionary.org/wiki/">https://bn.wiktionary.org</a><br>
+            <a href="https://bn.wikisource.org/wiki/">https://bn.wikisource.org</a><br>
+            <a href="https://bn.wikibooks.org/wiki/">https://bn.wikibooks.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-05-14<br>
-            2014-05-11<br>
-            2014-05-14<br>
-            2014-05-11
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-23
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            0.7
+            0.9
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_bnbundle_2014-05-25_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_bnwiki_latest/Xowa_bnbundle_2015-08-05.7z" class="external text" rel="nofollow">download</a><br>
           </p>
         </td>
       </tr>
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://fa.wikipedia.org/wiki/">http://fa.wikipedia.org</a><br>
-            <a href="https://fa.wiktionary.org/wiki/">http://fa.wiktionary.org</a><br>
-            <a href="https://fa.wikisource.org/wiki/">http://fa.wikisource.org</a><br>
-            <a href="https://fa.wikiquote.org/wiki/">http://fa.wikiquote.org</a><br>
-            <a href="https://fa.wikibooks.org/wiki/">http://fa.wikibooks.org</a><br>
-            <a href="https://fa.wikinews.org/wiki/">http://fa.wikinews.org</a>
+            <a href="https://fa.wikipedia.org/wiki/">https://fa.wikipedia.org</a><br>
+            <a href="https://fa.wiktionary.org/wiki/">https://fa.wiktionary.org</a><br>
+            <a href="https://fa.wikisource.org/wiki/">https://fa.wikisource.org</a><br>
+            <a href="https://fa.wikiquote.org/wiki/">https://fa.wikiquote.org</a><br>
+            <a href="https://fa.wikibooks.org/wiki/">https://fa.wikibooks.org</a><br>
+            <a href="https://fa.wikinews.org/wiki/">https://fa.wikinews.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2014-05-29<br>
-            2014-05-20<br>
-            2014-05-24<br>
-            2014-05-21<br>
-            2014-05-18<br>
-            2014-05-18
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05<br>
+            2015-08-05
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-08-23
+          </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
           <p>
-            5.1
+            6.5
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            .sqlite3
+            .xowa
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/details/Xowa_fabundle_2014-05-31_including_wikipedia" class="external text" rel="nofollow">download</a><br>
+            <a href="https://archive.org/download/Xowa_fawiki_latest/Xowa_fabundle_2015-08-05.7z" class="external text" rel="nofollow">download</a><br>
           </p>
         </td>
       </tr>
