--- a/index.html
+++ b/index.html
@@ -93,6 +93,20 @@
 </td>
 <td width='20%' valign='top' style='padding-left:5px;'> 
   <h2><span class='mw-headline' id='Recent_News'> Recent News </span></h2>
+  <b>2015-08-24</b> Persian and Bengali wikis released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_fawiki_latest" class="external text" rel="nofollow">Persian wikis</a>
+    </li>
+    <li> <a href="https://archive.org/details/Xowa_bnwiki_latest" class="external text" rel="nofollow">Bengali wikis</a>
+    </li>
+  </ul>
+
+  <b>2015-08-16</b> English Wikipedia update released<br/>
+  <ul>
+    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
+    </li>
+  </ul>
+
   <b>2015-06-22</b> English Wikipedia update released<br/>
   <ul>
     <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
@@ -107,110 +121,6 @@
     </li>
   </ul>
   
-  <b>2015-04-29</b> German wikis (rebuild) and Czech wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_czwiki_latest" class="external text" rel="nofollow">Czech wikis</a>
-    </li>
-  </ul>
-  
-  <b>2015-04-22</b> English wikis (rebuild), Simple wikis, Polish wikis, and Greek wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_simplewiki_latest" class="external text" rel="nofollow">Simple wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_plwiki_latest" class="external text" rel="nofollow">Polish wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_elwiki_latest" class="external text" rel="nofollow">Greek wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-03-16</b> English wikis (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_fiwiki_latest" class="external text" rel="nofollow">Finnish wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-03-09</b> Italian (update) wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_itwiki_latest" class="external text" rel="nofollow">Italian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-03-02</b> Dutch (update) and Latin (update) wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_nlwiki_latest" class="external text" rel="nofollow">Dutch wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_lawiki_latest" class="external text" rel="nofollow">Latin wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-02-23</b> Russian wikis (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_ruwiki_latest" class="external text" rel="nofollow">Russian wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-02-16</b> Simple wikis and English Wikipedia (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_simplewiki_latest" class="external text" rel="nofollow">Simple wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English Wikipedia</a>
-    </li>
-  </ul>
-
-  <b>2015-02-09</b> German wikis (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-02-02</b> English wikis (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2015-01-26</b> English Wikipedia (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2014-12-08</b> Arabic wikis (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_arwiki_latest" class="external text" rel="nofollow">Arabic wikis</a>
-    </li>
-  </ul>
-
-  <b>2014-12-01</b> French Wikipedia (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_frwiki_latest" class="external text" rel="nofollow">French wikis</a>
-    </li>
-  </ul>
-
-  <b>2014-11-23</b> English Wikipedia (update) released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_enwiki_latest" class="external text" rel="nofollow">English wikis</a>
-    </li>
-  </ul>
-
-  <b>2014-11-09</b> German (update), Latvian (new), Nynorsk (new), and Cebuano (new) wikis released<br/>
-  <ul>
-    <li> <a href="https://archive.org/details/Xowa_dewiki_latest" class="external text" rel="nofollow">German wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_lvwiki_latest" class="external text" rel="nofollow">Latvian wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_nnwiki_latest" class="external text" rel="nofollow">Nynorsk wikis</a>
-    </li>
-    <li> <a href="https://archive.org/details/Xowa_cebwiki_latest" class="external text" rel="nofollow">Cebuano wikis</a>
-    </li>
-  </ul>
-
 </td>
 </tr>
 </table>
